add navigator to stream youtube page

--- a/common/ressources.qrc
+++ b/common/ressources.qrc
@@ -15,5 +15,6 @@
         <file>qml/content/RequestsView.qml</file>
         <file>qml/content/RenderersView.qml</file>
         <file>qml/content/SharedView.qml</file>
+        <file>qml/content/Navigator.qml</file>
     </qresource>
 </RCC>
