new look&feel and usage of library qmlmodulesplugins

--- a/app/ressources.qrc
+++ b/app/ressources.qrc
@@ -16,5 +16,8 @@
         <file>qml/content/RenderersView.qml</file>
         <file>qml/content/SharedView.qml</file>
         <file>qml/content/Navigator.qml</file>
+        <file>qml/Pages/ApplicationPages.qml</file>
+        <file>images/exit.png</file>
+        <file>qml/content/Request.qml</file>
     </qresource>
 </RCC>
