--- a/app/ressources.qrc
+++ b/app/ressources.qrc
@@ -29,5 +29,8 @@
         <file>images/media.png</file>
         <file>images/debug.png</file>
         <file>icon.icns</file>
+        <file>qml/content/MediaRendererDelegate.qml</file>
+        <file>UPnP_AV_ConnectionManager_1.0.xml</file>
+        <file>UPnP_AV_ContentDirectory_1.0.xml</file>
     </qresource>
 </RCC>
