--- a/app/ressources.qrc
+++ b/app/ressources.qrc
@@ -32,5 +32,6 @@
         <file>qml/content/MediaRendererDelegate.qml</file>
         <file>UPnP_AV_ConnectionManager_1.0.xml</file>
         <file>UPnP_AV_ContentDirectory_1.0.xml</file>
+        <file>qml/content/RequestDelegate.qml</file>
     </qresource>
 </RCC>
