new view for last added media

--- a/app/ressources.qrc
+++ b/app/ressources.qrc
@@ -67,5 +67,7 @@
         <file>images/francetv.png</file>
         <file>images/rmcdecouverte.png</file>
         <file>images/dailymotion.png</file>
+        <file>qml/content/LastAddedMediaView.qml</file>
+        <file>qml/content/LastAddedMediaDelegate.qml</file>
     </qresource>
 </RCC>
